# Copyright 2023 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("../Lynx.gni")

# constant_share_sources

lynx_core_source_set("template_bundle") {
  sources = [
    "lynx_template_bundle.cc",
    "lynx_template_bundle.h",
  ]

  public_deps = [
    "../devtool_wrapper:devtool_wrapper",
    "template_codec:template_decoder",
  ]
}

lynx_core_source_set("template_bundle_converter") {
  sources = [
    "lynx_template_bundle_converter.cc",
    "lynx_template_bundle_converter.h",
  ]
  public_deps = [ ":template_bundle" ]
}
