# Copyright 2022 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.
import("devtool.gni")

import("//build/util/write_cmake_config.gni")
import("../../oliver/oliver.gni")
import("devtool.gni")

group("lynx_devtool_group") {
  deps = [
    "agent",
    "base",
    "common",
    "config",
    "element",
    "js_debug",
    "message_handler",
    "recorder",
    "shared_data",
    "tracing",
  ]

  if (!is_ios) {
    # DebugRouter for iOS provides jsoncpp
    deps += [ "../../third_party/jsoncpp" ]
  }
}

config("devtool_common_config") {
  include_dirs = [ "." ]
  if (is_android) {
    include_dirs += [ "build/gen" ]
  }

  configs = [ "../../third_party/rapidjson:rapidjson_config" ]
  defines = []

  if (enable_trace == "perfetto") {
    defines += [ "ENABLE_TRACE_PERFETTO=1" ]
  } else if (enable_trace == "systrace") {
    defines += [ "ENABLE_TRACE_SYSTRACE=1" ]
  }
}
